// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profile /> Snapshot tests should be hidden by default 1`] = `<div />`;

exports[`<Profile /> Snapshot tests should display if profile properties are all empty 1`] = `
<div>
  <div
    className="profile modal"
    onClick={[Function]}
  >
    <div
      className="container"
    >
      <div
        className="modal-content"
        onClick={[Function]}
      >
        <div
          className="modal-header"
        >
          <h4
            className="modal-title"
          >
            My Profile
          </h4>
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          className="modal-body"
        >
          <div>
            <div
              className="name"
            >
              <h5>
                Display Name
              </h5>
              <input
                className="form-control"
                defaultValue={null}
                type="text"
              />
            </div>
            <hr />
            <div
              className="birthday"
            >
              <h5>
                Birthday
              </h5>
              <input
                className="form-control"
                defaultValue="1970-01-01"
                type="date"
              />
            </div>
            <hr />
            <div
              className="bio"
            >
              <h5>
                User Bio
              </h5>
              <textarea
                className="form-control"
                defaultValue={null}
              />
            </div>
            <hr />
            <div
              className="filters"
            >
              <h5>
                User Filters
              </h5>
              <div
                className="gender"
              >
                <h6>
                  Gender Filter
                </h6>
                <div
                  className="filter element disabled"
                >
                  <div
                    className="toggle"
                  >
                    <label
                      className="switch"
                    >
                      <input
                        checked={undefined}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        className="slider round"
                      />
                    </label>
                  </div>
                  <div
                    className="content"
                  >
                    <div>
                      <div
                        className="Select is-clearable is-loading is-searchable Select--multi"
                        style={undefined}
                      >
                        <div
                          className="Select-control"
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          style={undefined}
                        >
                          <span
                            className="Select-multi-value-wrapper"
                            id="react-select-2--value"
                          >
                            <div
                              className="Select-placeholder"
                            >
                              Loading...
                            </div>
                            <div
                              className="Select-input"
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-activedescendant="react-select-2--value"
                                aria-describedby={undefined}
                                aria-expanded="false"
                                aria-haspopup="false"
                                aria-label={undefined}
                                aria-labelledby={undefined}
                                aria-owns=""
                                className={undefined}
                                id={undefined}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                role="combobox"
                                style={
                                  Object {
                                    "boxSizing": "content-box",
                                    "width": "5px",
                                  }
                                }
                                tabIndex={undefined}
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </span>
                          <span
                            aria-hidden="true"
                            className="Select-loading-zone"
                          >
                            <span
                              className="Select-loading"
                            />
                          </span>
                          <span
                            className="Select-arrow-zone"
                            onMouseDown={[Function]}
                          >
                            <span
                              className="Select-arrow"
                              onMouseDown={[Function]}
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="age"
              >
                <h6>
                  Age Filter
                </h6>
                <div
                  className="filter element disabled"
                >
                  <div
                    className="toggle"
                  >
                    <label
                      className="switch"
                    >
                      <input
                        checked={undefined}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        className="slider round"
                      />
                    </label>
                  </div>
                  <div
                    className="content"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="col col-md-6"
                      >
                        <label
                          className=" form-control-label"
                          htmlFor={undefined}
                        >
                          Minimum Age: 
                        </label>
                        <span
                          className="react-numeric-input"
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "position": "relative",
                            }
                          }
                        >
                          <input
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onInput={[Function]}
                            onKeyDown={[Function]}
                            onSelect={[Function]}
                            style={
                              Object {
                                "WebkitAppearance": "none",
                                "border": "1px solid #ccc",
                                "borderRadius": 2,
                                "boxSizing": "border-box",
                                "display": "block",
                                "fontSize": "inherit",
                                "lineHeight": "normal",
                                "paddingLeft": 4,
                                "paddingRight": "3ex",
                              }
                            }
                            type="text"
                            value=""
                          />
                          <b
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "background": "rgba(0,0,0,.1)",
                                "borderColor": "rgba(0,0,0,.1)",
                                "borderRadius": "2px 2px 0 0",
                                "borderStyle": "solid",
                                "borderWidth": "1px 1px 0 1px",
                                "bottom": "50%",
                                "boxShadow": "-1px -1px 3px rgba(0,0,0,.1) inset,1px 1px 3px rgba(255,255,255,.7) inset",
                                "cursor": "default",
                                "position": "absolute",
                                "right": 2,
                                "textAlign": "center",
                                "top": 2,
                                "transition": "all 0.1s",
                                "width": "2.26ex",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "borderColor": "transparent transparent rgba(0, 0, 0, 0.7)",
                                  "borderStyle": "solid",
                                  "borderWidth": "0 0.6ex 0.6ex 0.6ex",
                                  "height": 0,
                                  "left": "50%",
                                  "margin": "-0.3ex 0 0 -0.56ex",
                                  "position": "absolute",
                                  "top": "50%",
                                  "width": 0,
                                }
                              }
                            />
                          </b>
                          <b
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "background": "rgba(0,0,0,.1)",
                                "borderColor": "rgba(0,0,0,.1)",
                                "borderRadius": "0 0 2px 2px",
                                "borderStyle": "solid",
                                "borderWidth": "0 1px 1px 1px",
                                "bottom": 2,
                                "boxShadow": "-1px -1px 3px rgba(0,0,0,.1) inset,1px 1px 3px rgba(255,255,255,.7) inset",
                                "cursor": "default",
                                "position": "absolute",
                                "right": 2,
                                "textAlign": "center",
                                "top": "50%",
                                "transition": "all 0.1s",
                                "width": "2.26ex",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "borderColor": "rgba(0, 0, 0, 0.7) transparent transparent",
                                  "borderStyle": "solid",
                                  "borderWidth": "0.6ex 0.6ex 0 0.6ex",
                                  "height": 0,
                                  "left": "50%",
                                  "margin": "-0.3ex 0 0 -0.56ex",
                                  "position": "absolute",
                                  "top": "50%",
                                  "width": 0,
                                }
                              }
                            />
                          </b>
                        </span>
                      </div>
                      <div
                        className="col col-md-6"
                      >
                        <label
                          className=" form-control-label"
                          htmlFor={undefined}
                        >
                          Maximum Age: 
                        </label>
                        <span
                          className="react-numeric-input"
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "position": "relative",
                            }
                          }
                        >
                          <input
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onInput={[Function]}
                            onKeyDown={[Function]}
                            onSelect={[Function]}
                            style={
                              Object {
                                "WebkitAppearance": "none",
                                "border": "1px solid #ccc",
                                "borderRadius": 2,
                                "boxSizing": "border-box",
                                "display": "block",
                                "fontSize": "inherit",
                                "lineHeight": "normal",
                                "paddingLeft": 4,
                                "paddingRight": "3ex",
                              }
                            }
                            type="text"
                            value=""
                          />
                          <b
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "background": "rgba(0,0,0,.1)",
                                "borderColor": "rgba(0,0,0,.1)",
                                "borderRadius": "2px 2px 0 0",
                                "borderStyle": "solid",
                                "borderWidth": "1px 1px 0 1px",
                                "bottom": "50%",
                                "boxShadow": "-1px -1px 3px rgba(0,0,0,.1) inset,1px 1px 3px rgba(255,255,255,.7) inset",
                                "cursor": "default",
                                "position": "absolute",
                                "right": 2,
                                "textAlign": "center",
                                "top": 2,
                                "transition": "all 0.1s",
                                "width": "2.26ex",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "borderColor": "transparent transparent rgba(0, 0, 0, 0.7)",
                                  "borderStyle": "solid",
                                  "borderWidth": "0 0.6ex 0.6ex 0.6ex",
                                  "height": 0,
                                  "left": "50%",
                                  "margin": "-0.3ex 0 0 -0.56ex",
                                  "position": "absolute",
                                  "top": "50%",
                                  "width": 0,
                                }
                              }
                            />
                          </b>
                          <b
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "background": "rgba(0,0,0,.1)",
                                "borderColor": "rgba(0,0,0,.1)",
                                "borderRadius": "0 0 2px 2px",
                                "borderStyle": "solid",
                                "borderWidth": "0 1px 1px 1px",
                                "bottom": 2,
                                "boxShadow": "-1px -1px 3px rgba(0,0,0,.1) inset,1px 1px 3px rgba(255,255,255,.7) inset",
                                "cursor": "default",
                                "position": "absolute",
                                "right": 2,
                                "textAlign": "center",
                                "top": "50%",
                                "transition": "all 0.1s",
                                "width": "2.26ex",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "borderColor": "rgba(0, 0, 0, 0.7) transparent transparent",
                                  "borderStyle": "solid",
                                  "borderWidth": "0.6ex 0.6ex 0 0.6ex",
                                  "height": 0,
                                  "left": "50%",
                                  "margin": "-0.3ex 0 0 -0.56ex",
                                  "position": "absolute",
                                  "top": "50%",
                                  "width": 0,
                                }
                              }
                            />
                          </b>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <button
            className="btn btn-outline-secondary"
            onClick={[Function]}
            type="button"
          >
            Discard Changes
          </button>
          <button
            className="btn btn-primary"
            onClick={[Function]}
            type="button"
          >
            Save Changes
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Profile /> Snapshot tests should display profile properties when provided 1`] = `
<div>
  <div
    className="profile modal"
    onClick={[Function]}
  >
    <div
      className="container"
    >
      <div
        className="modal-content"
        onClick={[Function]}
      >
        <div
          className="modal-header"
        >
          <h4
            className="modal-title"
          >
            My Profile
          </h4>
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          className="modal-body"
        >
          <div>
            <div
              className="name"
            >
              <h5>
                Display Name
              </h5>
              <input
                className="form-control"
                defaultValue="Test User"
                type="text"
              />
            </div>
            <hr />
            <div
              className="birthday"
            >
              <h5>
                Birthday
              </h5>
              <input
                className="form-control"
                defaultValue="1991-10-18"
                type="date"
              />
            </div>
            <hr />
            <div
              className="bio"
            >
              <h5>
                User Bio
              </h5>
              <textarea
                className="form-control"
                defaultValue="This is a test bio for a test user"
              />
            </div>
            <hr />
            <div
              className="filters"
            >
              <h5>
                User Filters
              </h5>
              <div
                className="gender"
              >
                <h6>
                  Gender Filter
                </h6>
                <div
                  className="filter element disabled"
                >
                  <div
                    className="toggle"
                  >
                    <label
                      className="switch"
                    >
                      <input
                        checked={undefined}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        className="slider round"
                      />
                    </label>
                  </div>
                  <div
                    className="content"
                  >
                    <div>
                      <div
                        className="Select is-clearable is-loading is-searchable Select--multi"
                        style={undefined}
                      >
                        <div
                          className="Select-control"
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          style={undefined}
                        >
                          <span
                            className="Select-multi-value-wrapper"
                            id="react-select-3--value"
                          >
                            <div
                              className="Select-placeholder"
                            >
                              Loading...
                            </div>
                            <div
                              className="Select-input"
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-activedescendant="react-select-3--value"
                                aria-describedby={undefined}
                                aria-expanded="false"
                                aria-haspopup="false"
                                aria-label={undefined}
                                aria-labelledby={undefined}
                                aria-owns=""
                                className={undefined}
                                id={undefined}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                role="combobox"
                                style={
                                  Object {
                                    "boxSizing": "content-box",
                                    "width": "5px",
                                  }
                                }
                                tabIndex={undefined}
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </span>
                          <span
                            aria-hidden="true"
                            className="Select-loading-zone"
                          >
                            <span
                              className="Select-loading"
                            />
                          </span>
                          <span
                            className="Select-arrow-zone"
                            onMouseDown={[Function]}
                          >
                            <span
                              className="Select-arrow"
                              onMouseDown={[Function]}
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="age"
              >
                <h6>
                  Age Filter
                </h6>
                <div
                  className="filter element disabled"
                >
                  <div
                    className="toggle"
                  >
                    <label
                      className="switch"
                    >
                      <input
                        checked={undefined}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        className="slider round"
                      />
                    </label>
                  </div>
                  <div
                    className="content"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="col col-md-6"
                      >
                        <label
                          className=" form-control-label"
                          htmlFor={undefined}
                        >
                          Minimum Age: 
                        </label>
                        <span
                          className="react-numeric-input"
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "position": "relative",
                            }
                          }
                        >
                          <input
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onInput={[Function]}
                            onKeyDown={[Function]}
                            onSelect={[Function]}
                            style={
                              Object {
                                "WebkitAppearance": "none",
                                "border": "1px solid #ccc",
                                "borderRadius": 2,
                                "boxSizing": "border-box",
                                "display": "block",
                                "fontSize": "inherit",
                                "lineHeight": "normal",
                                "paddingLeft": 4,
                                "paddingRight": "3ex",
                              }
                            }
                            type="text"
                            value=""
                          />
                          <b
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "background": "rgba(0,0,0,.1)",
                                "borderColor": "rgba(0,0,0,.1)",
                                "borderRadius": "2px 2px 0 0",
                                "borderStyle": "solid",
                                "borderWidth": "1px 1px 0 1px",
                                "bottom": "50%",
                                "boxShadow": "-1px -1px 3px rgba(0,0,0,.1) inset,1px 1px 3px rgba(255,255,255,.7) inset",
                                "cursor": "default",
                                "position": "absolute",
                                "right": 2,
                                "textAlign": "center",
                                "top": 2,
                                "transition": "all 0.1s",
                                "width": "2.26ex",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "borderColor": "transparent transparent rgba(0, 0, 0, 0.7)",
                                  "borderStyle": "solid",
                                  "borderWidth": "0 0.6ex 0.6ex 0.6ex",
                                  "height": 0,
                                  "left": "50%",
                                  "margin": "-0.3ex 0 0 -0.56ex",
                                  "position": "absolute",
                                  "top": "50%",
                                  "width": 0,
                                }
                              }
                            />
                          </b>
                          <b
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "background": "rgba(0,0,0,.1)",
                                "borderColor": "rgba(0,0,0,.1)",
                                "borderRadius": "0 0 2px 2px",
                                "borderStyle": "solid",
                                "borderWidth": "0 1px 1px 1px",
                                "bottom": 2,
                                "boxShadow": "-1px -1px 3px rgba(0,0,0,.1) inset,1px 1px 3px rgba(255,255,255,.7) inset",
                                "cursor": "default",
                                "position": "absolute",
                                "right": 2,
                                "textAlign": "center",
                                "top": "50%",
                                "transition": "all 0.1s",
                                "width": "2.26ex",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "borderColor": "rgba(0, 0, 0, 0.7) transparent transparent",
                                  "borderStyle": "solid",
                                  "borderWidth": "0.6ex 0.6ex 0 0.6ex",
                                  "height": 0,
                                  "left": "50%",
                                  "margin": "-0.3ex 0 0 -0.56ex",
                                  "position": "absolute",
                                  "top": "50%",
                                  "width": 0,
                                }
                              }
                            />
                          </b>
                        </span>
                      </div>
                      <div
                        className="col col-md-6"
                      >
                        <label
                          className=" form-control-label"
                          htmlFor={undefined}
                        >
                          Maximum Age: 
                        </label>
                        <span
                          className="react-numeric-input"
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "position": "relative",
                            }
                          }
                        >
                          <input
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onInput={[Function]}
                            onKeyDown={[Function]}
                            onSelect={[Function]}
                            style={
                              Object {
                                "WebkitAppearance": "none",
                                "border": "1px solid #ccc",
                                "borderRadius": 2,
                                "boxSizing": "border-box",
                                "display": "block",
                                "fontSize": "inherit",
                                "lineHeight": "normal",
                                "paddingLeft": 4,
                                "paddingRight": "3ex",
                              }
                            }
                            type="text"
                            value=""
                          />
                          <b
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "background": "rgba(0,0,0,.1)",
                                "borderColor": "rgba(0,0,0,.1)",
                                "borderRadius": "2px 2px 0 0",
                                "borderStyle": "solid",
                                "borderWidth": "1px 1px 0 1px",
                                "bottom": "50%",
                                "boxShadow": "-1px -1px 3px rgba(0,0,0,.1) inset,1px 1px 3px rgba(255,255,255,.7) inset",
                                "cursor": "default",
                                "position": "absolute",
                                "right": 2,
                                "textAlign": "center",
                                "top": 2,
                                "transition": "all 0.1s",
                                "width": "2.26ex",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "borderColor": "transparent transparent rgba(0, 0, 0, 0.7)",
                                  "borderStyle": "solid",
                                  "borderWidth": "0 0.6ex 0.6ex 0.6ex",
                                  "height": 0,
                                  "left": "50%",
                                  "margin": "-0.3ex 0 0 -0.56ex",
                                  "position": "absolute",
                                  "top": "50%",
                                  "width": 0,
                                }
                              }
                            />
                          </b>
                          <b
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "background": "rgba(0,0,0,.1)",
                                "borderColor": "rgba(0,0,0,.1)",
                                "borderRadius": "0 0 2px 2px",
                                "borderStyle": "solid",
                                "borderWidth": "0 1px 1px 1px",
                                "bottom": 2,
                                "boxShadow": "-1px -1px 3px rgba(0,0,0,.1) inset,1px 1px 3px rgba(255,255,255,.7) inset",
                                "cursor": "default",
                                "position": "absolute",
                                "right": 2,
                                "textAlign": "center",
                                "top": "50%",
                                "transition": "all 0.1s",
                                "width": "2.26ex",
                              }
                            }
                          >
                            <i
                              style={
                                Object {
                                  "borderColor": "rgba(0, 0, 0, 0.7) transparent transparent",
                                  "borderStyle": "solid",
                                  "borderWidth": "0.6ex 0.6ex 0 0.6ex",
                                  "height": 0,
                                  "left": "50%",
                                  "margin": "-0.3ex 0 0 -0.56ex",
                                  "position": "absolute",
                                  "top": "50%",
                                  "width": 0,
                                }
                              }
                            />
                          </b>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <button
            className="btn btn-outline-secondary"
            onClick={[Function]}
            type="button"
          >
            Discard Changes
          </button>
          <button
            className="btn btn-primary"
            onClick={[Function]}
            type="button"
          >
            Save Changes
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
